--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <section class="section">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
+    <form action="mailto:ceo@sentinelstack.tech?subject=New Inquiry from SentinelStack Site&cc=info@sentinelstack.tech" method="post" enctype="text/plain">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
