--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SentinelStack</title>
+  <title>SentinelStack – AI Act Compliance & Threat Protection</title>
+  <meta name="description" content="SentinelStack offers real-time AI compliance, automated PDF audits, and email threat alerts under the EU AI Act. All-in-one platform for AI security." />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
@@ -16,32 +18,41 @@
       padding: 2rem 1rem;
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.7rem;
       margin-bottom: 1rem;
     }
     header p {
-      font-size: 1.1rem;
-      max-width: 800px;
+      font-size: 1.15rem;
+      max-width: 820px;
       margin: auto;
+      color: #aad;
     }
-    .features {
+    .cta-button {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.8rem 1.5rem;
+      background: #00f0ff;
+      color: #000;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 1.1rem;
+    }
+    .features, .audience, .how-it-works {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 2rem;
-      padding: 2rem 1rem;
+      padding: 3rem 1rem;
       background-color: #050505;
     }
-    .feature-box {
+    .feature-box, .audience-box, .how-box {
       border: 1px solid #00f0ff;
       border-radius: 12px;
       padding: 2rem;
-      width: 280px;
+      width: 300px;
       background-color: #000;
       text-align: left;
-    }
-    .feature-box h3 {
-      margin-top: 0;
     }
     .toggle input {
       display: none;
@@ -77,7 +88,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 280px;
+      height: 300px;
     }
     .plan h2 {
       font-size: 1.2rem;
@@ -110,7 +121,7 @@
       color: #888;
     }
     @media(max-width: 768px) {
-      .plans, .features {
+      .plans, .features, .audience, .how-it-works {
         flex-direction: column;
         align-items: center;
       }
@@ -122,24 +133,53 @@
     <img src="/sentinelstack-logo.png" alt="SentinelStack logo" style="height: 48px;" onerror="this.style.display='none';">
     <h1>Predict. Prevent. Protect.</h1>
     <p>
-      SentinelStack is your all-in-one solution for AI compliance, real-time threat detection,
-      automated PDF reporting, and business-grade infrastructure for safely deploying AI systems
-      in alignment with the EU AI Act and modern cybersecurity standards.
+      SentinelStack is your all-in-one platform for AI compliance, PDF audit generation, real-time threat detection and email alerts – purpose-built for EU AI Act and GDPR-driven organizations.
     </p>
+    <a href="#plans" class="cta-button">Start Free Risk Assessment</a>
   </header>
 
   <section class="features">
     <div class="feature-box">
       <h3>🔍 AI Act Compliance</h3>
-      <p>Automated monitoring and documentation for high-risk systems under the European AI Act.</p>
+      <p>Live policy scanning, risk categorization and classification under the EU AI Act.</p>
     </div>
     <div class="feature-box">
-      <h3>📩 Email Alerts</h3>
-      <p>Real-time notifications on compliance breaches, data leaks, and usage anomalies.</p>
+      <h3>📩 Real-time Alerts</h3>
+      <p>Get email alerts for breaches, anomalies, high-risk interactions and unverified outputs.</p>
     </div>
     <div class="feature-box">
-      <h3>📊 PDF Reports</h3>
-      <p>Auditable, signed PDF reports delivered weekly to your team or compliance officer.</p>
+      <h3>📊 PDF Compliance Reports</h3>
+      <p>Download-ready PDF reports that are signed, timestamped and auditable in court or for investors.</p>
+    </div>
+  </section>
+
+  <section class="audience">
+    <div class="audience-box">
+      <h3>🧠 AI Startups</h3>
+      <p>Ensure your AI product is compliant before investors or regulators ask.</p>
+    </div>
+    <div class="audience-box">
+      <h3>🏥 Healthcare & Legal</h3>
+      <p>Deploy AI tools safely in sensitive sectors with full logging and incident recovery.</p>
+    </div>
+    <div class="audience-box">
+      <h3>💼 Consultancies</h3>
+      <p>Deliver client-grade compliance dashboards, alerts and risk scoring automatically.</p>
+    </div>
+  </section>
+
+  <section class="how-it-works">
+    <div class="how-box">
+      <h3>1️⃣ Install Sentinel Agent</h3>
+      <p>Get our lightweight agent running on any AI-enabled system in under 5 minutes.</p>
+    </div>
+    <div class="how-box">
+      <h3>2️⃣ Capture & Classify</h3>
+      <p>Our backend AI scans inputs/outputs for risks, bias, legality and manipulation.</p>
+    </div>
+    <div class="how-box">
+      <h3>3️⃣ Get Reports & Alerts</h3>
+      <p>You'll get PDF summaries + email alerts every time something breaches policy.</p>
     </div>
   </section>
 
@@ -152,7 +192,7 @@
     </div>
   </section>
 
-  <section class="plans">
+  <section class="plans" id="plans">
     <div class="plan">
       <div class="tooltip" title="Perfect for solopreneurs and startups.">ⓘ</div>
       <h2>Starter – <span class="price" data-month="99" data-year="79">€99</span>/mo</h2>
